Receiving and sending messages to the queue, ping and root handlers
